# krisp-apm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  makefile  package-lock.json  package.json  start-prod.sh  test-parallel.sh
cmake/: CMakeLists.txt  krisp.third.party.linux.x64.cmake  mkl.linux.cmake
config/: ecosystem.config.js
krisp/models/: c6.8180d4_1.0.kef
krisp/sdk/krisp-audio-sdk-9.0.0-lin_x64-nc/include/: krisp-audio-api-definitions.hpp
krisp/sdk/krisp-audio-sdk-9.0.0-lin_x64-nc/licenses/fftw/: COPYING  COPYRIGHT  LICENSE
krisp/sdk/krisp-audio-sdk-9.2.0-server-lin_x64/dynamic/include/: krisp-audio-sdk-nc.hpp  krisp-audio-sdk-vad.hpp  krisp-audio-sdk.hpp
krisp/sdk/krisp-audio-sdk-9.2.0-server-lin_x64/static/include/: krisp-audio-api-definitions.hpp
src/: addon.cpp  app.js  cli.js  krisp-processor.js  main.cpp  server.js  test-client.js
src/client/: test-client.js
src/lib/: krisp-processor.js
src/server/: server.js
test/: nc-inb-server-test-driver.sh  test-client.js
